Last update before submission

--- a/report/index.html
+++ b/report/index.html
@@ -113,6 +113,8 @@
         <a href="https://www.holidayhackchallenge.com/2018/" class="btn btn-info">Holiday Hack 2018</a>
         <a href="https://kringlecon.com/" class="btn btn-info">Kringle Con 2018</a>
         <hr class="my-4">
+        <p>This report will be available at <a href="https://github.com/warquel/hh2018.git">https://github.com/warquel/hh2018.git</a> once the submission deadline passes.</p>
+        <hr class="my-4">
         <p>I am an Incident Response consultant at <a href="https://www.cisco.com/c/en/us/products/security/sas-incident-response.html">Cisco Security Incident Response Services Team</a>. Last year I was one of the contributors to the <a href="https://www.holidayhackchallenge.com/2017/winners/ncsa/report.html">Grand Prize winning entry for Holiday Hack 2017, Wintered</a> while a Senior Security Engineer at the <a href="http://www.ncsa.illinois.edu/">National Center for Supercomputing Applications</a>.</p>
         <p>Below is my solo entry for this year's Holiday Hack, Kringle Con. Provided are details for how to solve all the challenges, strategies for how to attack each challenge, and little bits of trivia I discovered along the way.</p>
         <p>I would like to thank SANS Counter Hack on all the hard work they put into these challenges every year. The amount of detail they put into these is impressive and certainly shows their passion for educating the community on a wide range of cyber security topics. This year's challenge was fun and challenging and I look forward to what they will come up with next year.</p>
